[package]
name = "histo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.139"

[build-dependencies]
cc = "1.0.79"

[dev-dependencies]
criterion = "0.4.0"
pprof = { version = "0.11.0", features = ["criterion", "prost-codec", "flamegraph"] }

[[bench]]
name = "c-vs-rs"
harness = false

[[bench]]
name = "rolled"
harness = false
